--- a/react_front/public/index.html
+++ b/react_front/public/index.html
@@ -12,5 +12,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://kit.fontawesome.com/8160c4029c.js" crossorigin="anonymous"></script>
   </body>
 </html>
