--- a/react_front/public/index.html
+++ b/react_front/public/index.html
@@ -11,5 +11,6 @@
   <body>
     <div id="root"></div>
     <script src="https://kit.fontawesome.com/8160c4029c.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </body>
 </html>
